aanpassig design en logo link aanpassingen

--- a/app/templates/tarieven.html
+++ b/app/templates/tarieven.html
@@ -15,7 +15,7 @@
         <li class="card-item swiper-slide">
             <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
             <div class="card-item__content">
-                <h1 class="card-item__title">DAGPAS</h1>
+                <h1 class="card-item__title" style="margin-bottom: 5px;">DAGPAS</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
                 <p class="card-item__text">lorum ipsum and all that good stuff. We got tarifs, we got bikes!
 What more could you need? What i need right now is more text here.
@@ -23,13 +23,13 @@ I could just put lorum ipsum here but thats boring.
 Nothing beats a good copywriting in the morning, yup.
 Whoever is reading this, i'm sorry for wasting 3 minutes of your time.
                     But thanks anyways! :D</p>
-                <a href="/dagpas"><button class="card-slider__button">KOOP NU</button></a>
+                <a href="/tarieven/dagpas"><button class="card-slider__button">KOOP NU</button></a>
             </div>
         </li>
         <li class="card-item swiper-slide">
             <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
             <div class="card-item__content">
-                <h1 class="card-item__title">WEEKPAS</h1>
+                <h1 class="card-item__title" style="margin-bottom: 5px;">WEEKPAS</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
                 <p class="card-item__text">lorum ipsum and all that good stuff. We got tarifs, we got bikes!
 What more could you need? What i need right now is more text here.
@@ -37,13 +37,13 @@ I could just put lorum ipsum here but thats boring.
 Nothing beats a good copywriting in the morning, yup.
 Whoever is reading this, i'm sorry for wasting 3 minutes of your time.
                     But thanks anyways! :D</p>
-                <a href="/dagpas"><button class="card-slider__button">KOOP NU</button></a>
+                <a href="/tarieven/weekpas"><button class="card-slider__button">KOOP NU</button></a>
             </div>
         </li>
         <li class="card-item swiper-slide">
             <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
             <div class="card-item__content">
-                <h1 class="card-item__title">JAARPAS</h1>
+                <h1 class="card-item__title" style="margin-bottom: 5px;">JAARPAS</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
                 <p class="card-item__text">lorum ipsum and all that good stuff. We got tarifs, we got bikes!
 What more could you need? What i need right now is more text here.
@@ -51,7 +51,7 @@ I could just put lorum ipsum here but thats boring.
 Nothing beats a good copywriting in the morning, yup.
 Whoever is reading this, i'm sorry for wasting 3 minutes of your time.
                     But thanks anyways! :D</p>
-                <a href="/dagpas"><button class="card-slider__button">KOOP NU</button></a>
+                <a href="/tarieven/jaarkaart"><button class="card-slider__button">KOOP NU</button></a>
             </div>
         </li>
     </ul>
