--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <a href="./"><div class="logo"><img src="../static/images/LOGO2.png" alt="vrouw op fiets" width="100" height="50"></div></a>
+  <a href="/"><div class="logo"><img src="../static/images/LOGO2.png" alt="vrouw op fiets" width="100" height="50"></div></a>
 
   <nav class="nav-links">
     <a href="#">Hoe het werkt</a>
