ik heb routes.py en instellingen.html aangepast

--- a/app/templates/instellingen.html
+++ b/app/templates/instellingen.html
@@ -55,7 +55,7 @@
   <hr class="my-5">
 
   <form method="POST" action="{{ url_for('routes.delete_account') }}">
-    <button type="submit" class="btn btn-danger" onclick="return confirm('Zijt ge zeker dat ge uw account wilt verwijderen? Dat kunt ge niet meer terugdraaien.')">
+    <button type="submit" class="btn btn-danger" onclick="return confirm('Bent u zeker dat u uw account permanent wilt verwijderen?')">
       Account verwijderen
     </button>
   </form>
