nu kan gebruiker zijn/haar foto uploaden op profiel pagina in routes.py profiel() db toegevoegd, profiel.html en instellingen.html aangepast

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -12,7 +12,8 @@
     {% else %}
     <div class="mb-4">
         <label class="form-label">Profielfoto:</label><br>
-        <img src="{{ url_for('static', filename='img/default.png') }}" alt="Geen profielfoto" class="img-thumbnail" style="max-width: 200px;">
+        <img src="{{ url_for('static', filename='uploads/' + user.profile_picture) }}" alt="Uw profielfoto" class="img-thumbnail" style="max-width: 200px;">
+
     </div>
     {% endif %}
 
