--- a/app/templates/tarieven.html
+++ b/app/templates/tarieven.html
@@ -8,7 +8,6 @@
 
 {% block content %}
 
-    <!-- aangepast -->
 <div class="div4">
     <div id="card-wrapper" class="card wrapper">
     <ul class="card-slider swiper-wrapper">
@@ -43,7 +42,7 @@ Whoever is reading this, i'm sorry for wasting 3 minutes of your time.
         <li class="card-item swiper-slide">
             <img src="https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1535759872/kuldar-kalvik-799168-unsplash.webp" class="card-image">
             <div class="card-item__content">
-                <h1 class="card-item__title" style="margin-bottom: 5px;">JAARPAS</h1>
+                <h1 class="card-item__title" style="margin-bottom: 5px;">JAARKAART</h1>
                 <img class="streep" style="width: 30%;" src="../static/images/streep.svg">
                 <p class="card-item__text">lorum ipsum and all that good stuff. We got tarifs, we got bikes!
 What more could you need? What i need right now is more text here.
@@ -57,7 +56,6 @@ Whoever is reading this, i'm sorry for wasting 3 minutes of your time.
     </ul>
     </div>
 </div>
-    <!-- aangepast -->
 
 
 {% endblock %}
