function call onderaan simulation.py in quotes gezet. - routes.py aangepast (interval , duur en versnelling  vervangen door aantal_dagen) -admin.html aangepast in conjunctie met aanpassingen aan routes.py

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -34,9 +34,7 @@
     <form method="post" action="/admin">
         <label>Aantal gebruikers:<br><input type="number" name="gebruikers" value="58000"></label><br>
         <label>Aantal fietsen:<br><input type="number" name="fietsen" value="10000"></label><br>
-        <label>Simulatieduur (stappen):<br><input type="number" name="duur" value="30"></label><br>
-        <label>Interval (seconden):<br><input type="number" name="interval" value="1"></label><br>
-        <label>Versnelling:<br><input type="number" name="versnelling" value="60"></label><br>
+        <label>Aantal dagen:<br><input type="number" name="dagen" value="30"></label><br>
         <button type="submit">Start simulatie</button>
     </form>
 
