meer witruimte tussen regels gelaten. veel mooier.

--- a/app/templates/tarieven/bedankt.html
+++ b/app/templates/tarieven/bedankt.html
@@ -10,7 +10,7 @@
 <div class="card-slider">
     <div class="card-item">
       <h2>🎉 Bedankt voor je aanvraag!</h2>
-      <p>We hebben je gegevens goed ontvangen.</p>
+      <p style="padding: 14px;">We hebben je gegevens goed ontvangen.</p>
 
       <ul>
         <li><strong>Voornaam:</strong> {{ data.voornaam }}</li>
@@ -20,7 +20,7 @@
         <li><strong>Geboortedatum:</strong> {{ data.geboortedatum }}</li>
       </ul>
 
-      <p>Je gekozen pincode is veilig opgeslagen. Je kunt nu gebruik maken van je pas!</p><br>
+      <p style="padding: 14px;">Je gekozen pincode is veilig opgeslagen. Je kunt nu gebruik maken van je pas!</p><br>
 
       <a href="/" class="terug-btn">Ga terug naar startpagina</a>
     </div>
