--- a/app/templates/instellingen.html
+++ b/app/templates/instellingen.html
@@ -22,52 +22,43 @@
 
   <form method="POST" action="{{ url_for('routes.instellingen') }}" enctype="multipart/form-data">
 
-    <div class="mb-3">
-      <label for="naam" class="form-label">Uw naam</label>
-      <input type="text" class="form-control" id="naam" name="naam" value="{{ user.name }}">
-    </div>
+<div class="mb-3">
+  <label for="titel" class="form-label">Titel</label>
+  <select class="form-select" id="titel" name="titel">
+    <option value="heer" {% if user.titel == 'heer' %}selected{% endif %}>Heer</option>
+    <option value="vrouw" {% if user.titel == 'vrouw' %}selected{% endif %}>Vrouw</option>
+  </select>
+</div>
 
-    <div class="mb-3">
-      <label for="email" class="form-label">E-mailadres</label>
-      <input type="email" class="form-control" id="email" name="email" value="{{ user.email }}">
-    </div>
+<div class="mb-3">
+  <label for="voornaam" class="form-label">Voornaam</label>
+  <input type="text" class="form-control" id="voornaam" name="voornaam" value="{{ user.voornaam }}">
+</div>
 
-    <div class="mb-3">
-      <label for="profile_picture" class="form-label">Profielfoto</label>
-      <input class="form-control" type="file" id="profile_picture" name="profile_picture">
-    </div>
+<div class="mb-3">
+  <label for="achternaam" class="form-label">Achternaam</label>
+  <input type="text" class="form-control" id="achternaam" name="achternaam" value="{{ user.achternaam }}">
+</div>
 
-{# De code--> Wachtwoord aanpassen is momenteel niet actief.#}
-{#    <hr>#}
-{##}
-{#    <h4>Wachtwoord aanpassen</h4>#}
-{#    <div class="mb-3">#}
-{#      <input type="password" class="form-control" name="old_password" placeholder="Oud wachtwoord" disabled>#}
-{#    </div>#}
-{#    <div class="mb-3">#}
-{#      <input type="password" class="form-control" name="new_password" placeholder="Nieuw wachtwoord" disabled>#}
-{#    </div>#}
-{#    <small class="text-muted">Wachtwoord wijzigen is momenteel niet actief.</small>#}
-{##}
-{#    <hr>#}
+<div class="mb-3">
+  <label for="telefoonnummer" class="form-label">Telefoonnummer</label>
+  <input type="text" class="form-control" id="telefoonnummer" name="telefoonnummer" value="{{ user.telefoonnummer }}">
+</div>
 
-    <h4>Voorkeuren</h4>
-    <div class="mb-3">
-      <label for="taal" class="form-label">Taalkeuze</label>
-      <select class="form-select" id="taal" name="taal">
-        <option value="nl" {% if user.taal == 'nl' %}selected{% endif %}>Nederlands</option>
-        <option value="en" {% if user.taal == 'en' %}selected{% endif %}>Engels</option>
-      </select>
-    </div>
+<div class="mb-3">
+  <label for="abonnement" class="form-label">Abonnement</label>
+  <select class="form-select" id="abonnement" name="abonnement">
+    <option value="Geen abonnement" {% if user.abonnement == 'Geen abonnement' %}selected{% endif %}>Geen abonnement</option>
+    <option value="Dagpas" {% if user.abonnement == 'Dagpas' %}selected{% endif %}>Dagpas</option>
+    <option value="Weekpas" {% if user.abonnement == 'Weekpas' %}selected{% endif %}>Weekpas</option>
+    <option value="Jaarkaart" {% if user.abonnement == 'Jaarkaart' %}selected{% endif %}>Jaarkaart</option>
+  </select>
+</div>
 
-    <div class="form-check mb-3">
-      <input class="form-check-input" type="checkbox" id="darkmode" name="darkmode" {% if user.darkmode %}checked{% endif %}>
-      <label class="form-check-label" for="darkmode">
-        Donkere modus inschakelen
-      </label>
-    </div>
 
     <button type="submit" class="btn btn-primary">Instellingen opslaan</button>
+    <a href="{{ url_for('routes.profile') }}" class="btn btn-secondary">Annuleren</a>
+
   </form>
 
   <hr class="my-5">
