--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
     <div class="dropdown">
       <a href="#">Meer ▼</a>
       <div class="dropdown-menu">
-        <a href="#">optie 1</a><br>
+        <a href="/defect">Fiets defect?</a><br>
         <a href="#">optie 2</a>
       </div>
     </div>
