simulatie voor free_bikes en empty_slots toevoegen (nog niet klaar)

--- a/app/templates/maps.html
+++ b/app/templates/maps.html
@@ -13,6 +13,7 @@
 
 {% block content %}
     <div id="map"></div>
+
 {% endblock %}
 
 {% block scripts %}
@@ -62,4 +63,8 @@
         .bindPopup(popupContent);
 });
 </script>
+
+    <button id="refresh-button">Ververs Data</button>
+    <div id="map"></div>
+
 {% endblock %}
